# asusctl

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Cranky.toml  MANUAL.md  Makefile  README.md  README_DBUS.md  TODO.md  asus-nb-ctrl.spec  deny.toml  design-patterns.md  rust-toolchain  rustfmt.toml
asus-nb/: Cargo.toml
asus-nb-ctrl/: Cargo.toml
asus-nb-ctrl/src/: config.rs  ctrl_anime.rs  ctrl_charge.rs  ctrl_fan_cpu.rs  ctrl_leds.rs  ctrl_rog_bios.rs  daemon.rs  dbus.rs  error.rs  laptops.rs  lib.rs  main.rs  supported.rs
asus-nb-ctrl/src/ctrl_gfx/: error.rs  gfx.rs  mod.rs  system.rs
asus-nb/examples/: animatrix.rs  ball.rs  comet.rs  iterate-keys.rs  per-key-effect-2.rs  pulser.rs
asus-nb/src/: anime_dbus.rs  anime_matrix.rs  aura_modes.rs  cli_options.rs  core_dbus.rs  dbus_anime.rs  dbus_charge.rs  dbus_gfx.rs  dbus_ledmode.rs  dbus_profile.rs  dbus_rogbios.rs  dbus_supported.rs  error.rs  lib.rs  profile.rs  zbus_anime.rs  zbus_charge.rs  zbus_led.rs  zbus_profile.rs  zbus_rogbios.rs
asus-notify/: Cargo.toml
asus-notify/src/: main.rs
asusctl/: Cargo.toml
asusctl/examples/: animatrix-diag-png.rs  animatrix-diag.rs  animatrix-gif.rs  animatrix-grid.rs  animatrix-outline.rs  animatrix-png-gif.rs  animatrix-png.rs  animatrix-spinning.rs  animatrix.rs  anime-diag-png.rs  anime-diag.rs  anime-gif.rs  anime-grid.rs  anime-outline.rs  anime-png.rs  anime-spinning.rs  aura-rgb-ball.rs  aura-rgb-ball.rs-  aura-rgb-breathe.rs  aura-rgb-comet.rs  aura-rgb-iterate-keys.rs  aura-rgb-per-key-effect-2.rs  aura-rgb-pulser.rs  aura-zoned-breathe.rs  ball.rs  comet.rs  iterate-keys.rs  per-key-effect-2.rs  pulser.rs
asusctl/src/: anime_cli.rs  aura_cli.rs  cli_opts.rs  fan_curve_cli.rs  main.rs  profiles_cli.rs  scsi_cli.rs  slash_cli.rs
asusd/: Cargo.toml
asusd-user/: Cargo.toml
asusd-user/src/: config.rs  ctrl_anime.rs  daemon.rs  error.rs  lib.rs  zbus_anime.rs
asusd/src/: asus_armoury.rs  aura_manager.rs  aura_types.rs  config.rs  ctrl_backlight.rs  ctrl_fancurves.rs  ctrl_platform.rs  ctrl_power.rs  ctrl_supported.rs  daemon.rs  error.rs  hid_manager.rs  lib.rs
asusd/src/asus_armoury/: attr_enum_int.rs  attr_enum_str.rs  attr_int.rs  mod.rs
asusd/src/aura_anime/: config.rs  mod.rs  trait_impls.rs
asusd/src/aura_laptop/: config.rs  mod.rs  trait_impls.rs
asusd/src/aura_scsi/: config.rs  mod.rs  trait_impls.rs
asusd/src/aura_slash/: config.rs  mod.rs  trait_impls.rs
asusd/src/ctrl_anime/: config.rs  mod.rs  trait_impls.rs
asusd/src/ctrl_aura/: config.rs  controller.rs  manager.rs  mod.rs  trait_impls.rs
asusd/src/ctrl_profiles/: config.rs  controller.rs  mod.rs  trait_impls.rs
asusd/src/ctrl_slash/: config.rs  mod.rs  trait_impls.rs
config-traits/: Cargo.toml  README.md
config-traits/src/: lib.rs
ctrl-gfx/: Cargo.toml
ctrl-gfx/src/: ctrl_gfx.rs  lib.rs  system.rs  vendors.rs
daemon/: Cargo.toml
daemon-user/: Cargo.toml  README.md
daemon-user/src/: config.rs  ctrl_anime.rs  daemon.rs  error.rs  lib.rs  main.rs  user_config.rs  zbus_anime.rs
daemon/src/: config.rs  config_anime.rs  config_aura.rs  config_old.rs  config_traits.rs  ctrl_anime.rs  ctrl_charge.rs  ctrl_fan_cpu.rs  ctrl_leds.rs  ctrl_platform.rs  ctrl_power.rs  ctrl_rog_bios.rs  ctrl_supported.rs  daemon.rs  error.rs  laptops.rs  lib.rs  session_manager.rs  supported.rs  systemd.rs
daemon/src/ctrl_anime/: config.rs  mod.rs  trait_impls.rs  zbus.rs
daemon/src/ctrl_aura/: config.rs  controller.rs  mod.rs  trait_impls.rs  (+1 more)
logind-zbus/: Cargo.toml
logind-zbus/src/: lib.rs  zbus_logind.rs
rog-anime/: Cargo.toml  README.md
rog-anime/src/: anime_diagonal.rs  anime_gif.rs  anime_grid.rs  anime_image.rs  data.rs  diagonal.rs  error.rs  gif.rs  grid.rs  image.rs  lib.rs  sequencer.rs  simulator.rs  usb.rs
rog-anime/tests/: ga401.rs  ga402q.rs  gu604.rs
rog-aura/: Cargo.toml  README.md
rog-aura/data/: aura_support.ron  per_key_raw_bytes.ods
rog-aura/src/: advanced.rs  advanced_to_str.rs  aura_detection.rs  aura_modes.rs  builtin_modes.rs  data.rs  deprecated.rs  error.rs  key_to_str.rs  keys.rs  layouts.rs  lib.rs  per_key_rgb.rs  per_zone.rs  power.rs  sequencer.rs  usb.rs
rog-control-center/: Cargo.toml  Makefile  README.md  build.rs
rog-control-center/data/: rog-control-center.desktop
rog-control-center/src/: app.rs  cli_options.rs  config.rs  error.rs  lib.rs  main.rs  mocking.rs  notify.rs  page_states.rs  startup_error.rs  system_state.rs  tray.rs  ui_setup.rs  update_and_notify.rs  zbus.rs  zbus_proxies.rs
rog-control-center/ui/: common_widgets.slint  globals.slint  main_window.slint
rog-dbus/: Cargo.toml
rog-dbus/src/: asus_armoury.rs  lib.rs  scsi_aura.rs  zbus_anime.rs  zbus_aura.rs  zbus_backlight.rs  zbus_charge.rs  zbus_fan_curves.rs  zbus_gfx.rs  zbus_led.rs  zbus_platform.rs  zbus_power.rs  zbus_profile.rs  zbus_rogbios.rs  zbus_slash.rs  zbus_supported.rs
rog-platform/: Cargo.toml
rog-platform/examples/: ally-gamepad-calibration.rs  ally-gamepad-mode-changes.rs  ally-set-qam-secondary.rs
rog-platform/src/: asus_armoury.rs  backlight.rs  cpu.rs  error.rs  firmware_attributes.rs  hid_raw.rs  keyboard_led.rs  lib.rs  macros.rs  platform.rs  power.rs  supported.rs  usb_raw.rs
rog-profiles/: Cargo.toml
rog-profiles/src/: error.rs  fan_curve_set.rs  fan_curves.rs  lib.rs  profiles.rs
rog-scsi/: Cargo.toml
rog-scsi/src/: builtin_modes.rs  error.rs  lib.rs  scsi.rs
rog-slash/: Cargo.toml
rog-slash/src/: data.rs  error.rs  lib.rs  usb.rs
rog-supported/: Cargo.toml
rog-supported/src/: lib.rs
rog-types/: Cargo.toml
rog-types/src/: anime_matrix.rs  aura_modes.rs  aura_perkey.rs  cli_options.rs  error.rs  gfx_vendors.rs  lib.rs  profile.rs  supported.rs
simulators/: Cargo.toml
simulators/src/: simulator.rs
slashctl/: Cargo.toml
slashctl/src/: error.rs  main.rs
supergfx/: Cargo.toml  Makefile
supergfx/data/: org.supergfxctl.Daemon.conf  supergfxd.service
supergfx/src/: cli.rs  config.rs  controller.rs  daemon.rs  error.rs  gfx_vendors.rs  lib.rs  special.rs  zbus.rs  zbus_iface.rs  zbus_proxy.rs
(+266 files in other folders)
