[workspace.package]
version = "6.0.8"
rust-version = "1.77"
license = "MPL-2.0"
readme = "README.md"
authors = ["Luke <luke@ljones.dev>"]
repository = "https://gitlab.com/asus-linux/asusctl"
homepage = "https://gitlab.com/asus-linux/asusctl"
description = "Laptop feature control for ASUS ROG laptops and others"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "asusctl",
    "asusd",
    "asusd-user",
    "config-traits",
    "cpuctl",
    "dmi-id",
    "rog-platform",
    "rog-dbus",
    "rog-anime",
    "rog-aura",
    "rog-profiles",
    "rog-control-center",
    "rog-slash",
    "simulators",
]
default-members = [
    "asusctl",
    "asusd",
    "asusd-user",
    "cpuctl",
    "rog-control-center",
]

[workspace.dependencies]
tokio = { version = "^1.36.0", default-features = false, features = [
    "macros",
    "sync",
    "time",
    "rt-multi-thread",
] }
concat-idents = "^1.1"
dirs = "^4.0"
smol = "^1.3"
mio = "0.8.11"

zbus = "4.2"
logind-zbus = { version = "4.0.3" } #, default-features = false, features = ["non_blocking"] }

serde = "^1.0"
serde_derive = "^1.0"
ron = "*"
typeshare = "1.0.0"

log = "^0.4"
env_logger = "^0.10.0"

glam = { version = "^0.22", features = ["serde"] }
gumdrop = "^0.8"
udev = { version = "^0.8", features = ["mio"] }
rusb = "^0.9"
inotify = "^0.10.0"

png_pong = "^0.8"
pix = "^0.13"
tinybmp = "^0.4.0"
gif = "^0.12.0"

versions = "6.2"

notify-rust = { git = "https://github.com/flukejones/notify-rust.git", rev = "54176413b81189a3e4edbdc20a0b4f7e2e35c063", default-features = false, features = [
    "z",
] }

[profile.release]
# thin = 57s, asusd = 9.0M
# fat = 72s, asusd = 6.4M
lto = "fat"
debug = false
opt-level = 3
panic = "abort"
codegen-units = 1

[profile.dev]
opt-level = 1
codegen-units = 16

[profile.dev.package."*"]
opt-level = 1
codegen-units = 16

[profile.bench]
debug = false
opt-level = 3

[workspace.dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
