[package]
name = "asus-nb-ctrl"
version = "2.2.1"
license = "MPL-2.0"
readme = "README.md"
authors = ["Luke <luke@ljones.dev>"]
repository = "https://gitlab.com/asus-linux/asus-nb-ctrl"
homepage = "https://gitlab.com/asus-linux/asus-nb-ctrl"
description = "A daemon app for ASUS GX502 and similar laptops to control missing features"
edition = "2018"

[lib]
name = "daemon"
path = "src/lib.rs"

[[bin]]
name = "asusctl"
path = "src/main.rs"

[[bin]]
name = "asusd"
path = "src/daemon.rs"

[dependencies]
asus-nb = { path = "../asus-nb" }
rusb = "^0.6.0"
udev = "^0.4.0"

# cli and logging
gumdrop = "^0.8.0"
log = "^0.4.8"
env_logger = "^0.7.1"

zbus = "^1.8.0"
zvariant = "^2.4.0"

# serialisation
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
toml = "0.4.6"

# Device control
sysfs-class = "^0.1.2" # used for backlight control and baord ID
rog_fan_curve = { version = "0.1.5", features = ["serde"] }
# cpu power management
intel-pstate = "^0.2.1"

yansi-term = "^0.1"