[package]
name = "asus-notify"
version = "3.0.1"
authors = ["Luke D Jones <luke@ljones.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serialisation
serde_json = "^1.0"
rog_dbus = { path = "../rog-dbus" }
rog_aura = { path = "../rog-aura" }
rog_types = { path = "../rog-types" }
rog_profiles = { path = "../rog-profiles" }

[dependencies.notify-rust]
version = "^4.3"
default-features = false
features = ["z"]