[package]
name = "asus-notify"
version.workspace = true
authors = ["Luke D Jones <luke@ljones.dev>"]
edition = "2021"

[dependencies]
zbus.workspace = true
# serialisation
serde_json.workspace = true
rog_dbus = { path = "../rog-dbus" }
rog_aura = { path = "../rog-aura" }
rog_platform = { path = "../rog-platform" }
rog_profiles = { path = "../rog-profiles" }
smol.workspace = true
notify-rust.workspace = true