[package]
name = "asusd-user"
license.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[[bin]]
name = "asusd-user"
path = "src/daemon.rs"

[dependencies]
dirs.workspace = true
smol.workspace = true

# serialisation
serde.workspace = true
serde_derive.workspace = true
ron.workspace = true

rog_anime = { path = "../rog-anime" }
rog_aura = { path = "../rog-aura" }
rog_dbus = { path = "../rog-dbus" }
rog_platform = { path = "../rog-platform" }
config-traits = { path = "../config-traits" }

zbus.workspace = true
env_logger.workspace = true

[dev-dependencies]
cargo-husky.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde"]
