[package]
name = "ctrl-gfx"
version = "2.1.4"
license = "MPL-2.0"
readme = "README.md"
authors = ["Luke <luke@ljones.dev>"]
description = "Fine control of laptop GPU"
edition = "2018"

[dependencies]
sysfs-class = "^0.1.2"
log = "^0.4"

zbus = { version = "1.8.0", optional = true }
zvariant = { version = "2.4.0", optional = true }

[features]
default = ["use-zbus"]
use-zbus = ["zbus", "zvariant"]