[package]
name = "daemon-user"
version = "1.0.0"
authors = ["Luke D Jones <luke@ljones.dev>"]
edition = "2018"
description = "Usermode daemon for user settings, anime, per-key lighting"

[lib]
name = "rog_user"
path = "src/lib.rs"

[[bin]]
name = "asusd-user"
path = "src/daemon.rs"

[dependencies]
# serialisation
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"

rog_anime = { path = "../rog-anime" }
rog_dbus = { path = "../rog-dbus" }
rog_types = { path = "../rog-types" }

dirs = "3.0.1"

zbus = "^1.9.1"
zvariant = "^2.6"
zvariant_derive = "^2.6"