[package]
name = "daemon-user"
version = "1.2.0"
authors = ["Luke D Jones <luke@ljones.dev>"]
edition = "2018"
description = "Usermode daemon for user settings, anime, per-key lighting"

[lib]
name = "rog_user"
path = "src/lib.rs"

[[bin]]
name = "asusd-user"
path = "src/daemon.rs"

[dependencies]
# serialisation
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"

rog_anime = { path = "../rog-anime" }
rog_dbus = { path = "../rog-dbus" }
rog_supported = { path = "../rog-supported" }

dirs = "^4.0"

zbus = "^2.2"
zvariant = "^3.0"
zvariant_derive = "^3.0"

smol = "^1.2"