[package]
name = "daemon"
version = "4.0.7"
license = "MPL-2.0"
readme = "README.md"
authors = ["Luke <luke@ljones.dev>"]
repository = "https://gitlab.com/asus-linux/asus-nb-ctrl"
homepage = "https://gitlab.com/asus-linux/asus-nb-ctrl"
description = "A daemon app for ASUS GX502 and similar laptops to control missing features"
edition = "2018"

[lib]
name = "daemon"
path = "src/lib.rs"

[[bin]]
name = "asusd"
path = "src/daemon.rs"

[dependencies]
rog_anime = { path = "../rog-anime", features = ["dbus"] }
rog_aura = { path = "../rog-aura", features = ["dbus"] }
rog_supported = { path = "../rog-supported" }
rog_profiles = { path = "../rog-profiles" }
rog_dbus = { path = "../rog-dbus" }

async-executor = "1.4.1"
async-trait = "^0.1"
futures = { version = "0.3.19", features = ["executor", "thread-pool"] }

rusb = "^0.8"
udev = "^0.6"

# cli and logging
log = "^0.4"
env_logger = "^0.8"

zbus = "^2.0"
zvariant = "^3.0"
logind-zbus = { version = "^2.0" } #, default-features = false, features = ["non_blocking"] }

# serialisation
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
toml = "^0.5.8"

# Device control
sysfs-class = "^0.1.2" # used for backlight control and baord ID
