[package]
name = "daemon"
version = "4.2.1"
license = "MPL-2.0"
readme = "README.md"
authors = ["Luke <luke@ljones.dev>"]
repository = "https://gitlab.com/asus-linux/asus-nb-ctrl"
homepage = "https://gitlab.com/asus-linux/asus-nb-ctrl"
description = "A daemon app for ASUS GX502 and similar laptops to control missing features"
edition = "2018"

[lib]
name = "daemon"
path = "src/lib.rs"

[[bin]]
name = "asusd"
path = "src/daemon.rs"

[dependencies]
rog_anime = { path = "../rog-anime", features = ["dbus"] }
rog_aura = { path = "../rog-aura", features = ["dbus"] }
rog_supported = { path = "../rog-supported" }
rog_profiles = { path = "../rog-profiles" }
rog_dbus = { path = "../rog-dbus" }

async-trait = "^0.1"
smol = "^1.2"

rusb = "^0.9"
udev = "^0.6"

# cli and logging
log = "^0.4"
env_logger = "^0.9"

zbus = "^2.2"
zvariant = "^3.2"
logind-zbus = { version = "^3.0" } #, default-features = false, features = ["non_blocking"] }

# serialisation
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
toml = "^0.5.8"

# Device control
sysfs-class = "^0.1.2" # used for backlight control and baord ID
