[package]
name = "daemon"
license = "MPL-2.0"
version.workspace = true
readme = "README.md"
authors = ["Luke <luke@ljones.dev>"]
repository = "https://gitlab.com/asus-linux/asus-nb-ctrl"
homepage = "https://gitlab.com/asus-linux/asus-nb-ctrl"
description = "A daemon app for ASUS GX502 and similar laptops to control missing features"
edition = "2021"

[lib]
name = "daemon"
path = "src/lib.rs"

[[bin]]
name = "asusd"
path = "src/daemon.rs"

[dependencies]
rog_anime = { path = "../rog-anime", features = ["dbus"] }
rog_aura = { path = "../rog-aura", features = ["dbus"] }
rog_platform = { path = "../rog-platform" }
rog_profiles = { path = "../rog-profiles" }
rog_dbus = { path = "../rog-dbus" }

async-trait.workspace = true
tokio.workspace = true

# cli and logging
log.workspace = true
env_logger.workspace = true

zbus.workspace = true
logind-zbus.workspace = true

# serialisation
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
toml.workspace = true
ron.workspace = true

# Device control
sysfs-class.workspace = true # used for backlight control and baord ID

concat-idents.workspace = true

systemd-zbus = "*"