[package]
name = "logind-zbus"
version = "0.1.0"
license = "MPL-2.0"
readme = "README.md"
authors = ["Luke D Jones <luke@ljones.dev>"]
edition = "2018"
description = "A dbus client (using zbus) for logind"

[dependencies]
serde = "^1.0"
serde_json = "^1.0"
zbus = "^1.8"
zbus_macros = "^1.8"
zvariant = "^2.5"
zvariant_derive = "^2.5"