[package]
name = "rog_anime"
license = "MPL-2.0"
version.workspace = true
readme = "README.md"
authors = ["Luke <luke@ljones.dev>"]
repository = "https://gitlab.com/asus-linux/asus-nb-ctrl"
homepage = "https://gitlab.com/asus-linux/asus-nb-ctrl"
documentation = "https://docs.rs/rog-anime"
description = "Types useful for translating images and other data for display on the ASUS AniMe Matrix display"
keywords = ["ROG", "ASUS", "AniMe"]
edition = "2021"
exclude = ["data"]

[features]
default = ["dbus", "detect"]
dbus = ["zbus"]
detect = ["sysfs-class"]

[dependencies]
png_pong.workspace = true
pix.workspace = true
gif.workspace = true
log.workspace = true

serde.workspace = true
serde_derive.workspace = true

glam.workspace = true

zbus = { workspace = true, optional = true }

sysfs-class = { workspace = true, optional = true }
