[package]
name = "rog_aura"
version.workspace = true
license = "MPL-2.0"
readme = "README.md"
authors = ["Luke <luke@ljones.dev>"]
repository = "https://gitlab.com/asus-linux/asusctl"
homepage = "https://gitlab.com/asus-linux/asusctl"
documentation = "https://docs.rs/rog-anime"
description = "Types useful for fancy keyboards on ASUS ROG laptops"
keywords = ["ROG", "ASUS", "Aura"]
edition = "2021"
exclude = ["data"]

[features]
default = ["dbus", "toml"]
dbus = ["zvariant"]

[dependencies]
serde.workspace = true
serde_derive.workspace = true
toml = { workspace = true, optional = true }
zvariant = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true