[package]
name = "rog_aura"
license = "MPL-2.0"
version.workspace = true
readme = "README.md"
authors = ["Luke <luke@ljones.dev>"]
repository = "https://gitlab.com/asus-linux/asusctl"
homepage = "https://gitlab.com/asus-linux/asusctl"
documentation = "https://docs.rs/rog-anime"
description = "Types useful for fancy keyboards on ASUS ROG laptops"
keywords = ["ROG", "ASUS", "Aura"]
edition = "2021"
exclude = ["data"]

[features]
default = ["dbus", "ron"]
dbus = ["zbus"]

[dependencies]
serde.workspace = true
zbus = { workspace = true, optional = true }
dmi_id = { path = "../dmi-id" }

# cli and logging
log.workspace = true
typeshare.workspace = true

ron = { version = "*", optional = true }
