[package]
name = "rog-control-center"
license.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[features]
#default = ["mocking"]
#mocking = []

[dependencies]
nix = "^0.26.1"
tempfile = "3.3.0"
betrayer = { version = "0.2.0", features = ["winit"] }

asusd = { path = "../asusd" }
config-traits = { path = "../config-traits" }
rog_anime = { path = "../rog-anime" }
rog_dbus = { path = "../rog-dbus" }
rog_aura = { path = "../rog-aura" }
rog_profiles = { path = "../rog-profiles" }
rog_platform = { path = "../rog-platform" }
supergfxctl = { git = "https://gitlab.com/asus-linux/supergfxctl.git", default-features = false }
dmi_id = { path = "../dmi-id" }

gumdrop.workspace = true
log.workspace = true
env_logger.workspace = true

tokio.workspace = true
serde.workspace = true
ron.workspace = true
serde_json.workspace = true
serde_derive.workspace = true
zbus.workspace = true
dirs.workspace = true
notify-rust.workspace = true
concat-idents.workspace = true

png_pong.workspace = true
versions.workspace = true

[dependencies.slint]
git = "https://github.com/slint-ui/slint.git"
default-features = false
features = [
    "std",
    "gettext",
    "compat-1-2",
    "backend-winit-wayland",
    "backend-linuxkms",
    "renderer-winit-femtovg",
]

[build-dependencies.slint-build]
git = "https://github.com/slint-ui/slint.git"

[dev-dependencies]
cargo-husky.workspace = true
