[package]
name = "rog-control-center"
license.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[features]
default = []
mocking = []
x11 = ["slint/backend-winit-x11"]
# Requires RUSTFLAGS="--cfg tokio_unstable"
tokio-debug = ["console-subscriber"]

[dependencies]
console-subscriber = { version = "^0.4", optional = true }

ksni = { version = "0.3", default-features = false, features = ["async-io"] }
image = "0.25.5"

asusd = { path = "../asusd" }
config-traits = { path = "../config-traits" }
rog_anime = { path = "../rog-anime" }
rog_dbus = { path = "../rog-dbus" }
rog_aura = { path = "../rog-aura" }
rog_profiles = { path = "../rog-profiles" }
rog_platform = { path = "../rog-platform" }
supergfxctl = { git = "https://gitlab.com/asus-linux/supergfxctl.git", default-features = false }
dmi_id = { path = "../dmi-id" }

gumdrop.workspace = true
log.workspace = true
env_logger.workspace = true

tokio.workspace = true
serde.workspace = true
zbus.workspace = true
dirs.workspace = true
notify-rust.workspace = true
concat-idents.workspace = true
futures-util.workspace = true

versions.workspace = true

[dependencies.slint]
git = "https://github.com/slint-ui/slint.git"
default-features = false
features = [
    "gettext",
    "compat-1-2",
    "backend-winit-wayland",
    "renderer-winit-femtovg",
    # "renderer-skia-opengl",
]

[build-dependencies.slint-build]
git = "https://github.com/slint-ui/slint.git"
