[package]
name = "rog_platform"
license = "MPL-2.0"
version.workspace = true
edition = "2021"

[dependencies]
log.workspace = true
rog_aura = { path = "../rog-aura" }
rog_profiles = { path = "../rog-profiles" }
serde.workspace = true
serde_derive.workspace = true
zbus.workspace = true
sysfs-class.workspace = true
concat-idents.workspace = true
udev.workspace = true
inotify.workspace = true
typeshare.workspace = true

rusb.workspace = true

[dev-dependencies]
cargo-husky.workspace = true