[package]
name = "rog_platform"
license.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
log.workspace = true
serde.workspace = true
serde_derive.workspace = true
zbus.workspace = true
concat-idents.workspace = true
udev.workspace = true
inotify.workspace = true
typeshare.workspace = true

rusb.workspace = true

[dev-dependencies]
cargo-husky.workspace = true
rog_aura = { path = "../rog-aura" }
