[package]
name = "rog_profiles"
version.workspace = true
authors = ["Luke D. Jones <luke@ljones.dev>"]
edition = "2021"

[features]
default = ["dbus"]
dbus = ["zbus"]

[dependencies]
udev.workspace = true
serde.workspace = true
serde_derive.workspace = true

zbus = { workspace = true, optional = true }