[package]
name = "rog_profiles"
license = "MPL-2.0"
version.workspace = true
authors = ["Luke D. Jones <luke@ljones.dev>"]
edition = "2021"

[features]
default = ["dbus"]
dbus = ["zbus"]

[dependencies]
log.workspace = true
udev.workspace = true
serde.workspace = true
serde_derive.workspace = true
typeshare.workspace = true

zbus = { workspace = true, optional = true }

[dev-dependencies]
cargo-husky.workspace = true