[package]
name = "rog_slash"
license = "MPL-2.0"
version.workspace = true
readme = "README.md"
authors = ["Luke <luke@ljones.dev>"]
repository = "https://gitlab.com/asus-linux/asus-nb-ctrl"
homepage = "https://gitlab.com/asus-linux/asus-nb-ctrl"
documentation = "https://docs.rs/rog-anime"
description = "ASUS Slash display"
keywords = ["ROG", "ASUS", "AniMe", "Slash"]
edition = "2024"
exclude = ["data"]

[dependencies]
log.workspace = true
serde.workspace = true
serde_derive.workspace = true
zbus.workspace = true
concat-idents.workspace = true
udev.workspace = true
inotify.workspace = true
typeshare.workspace = true

rusb.workspace = true

[dev-dependencies]
cargo-husky.workspace = true
rog_aura = { path = "../rog-aura" }