[package]
name = "rog_slash"
license.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
documentation = "https://docs.rs/rog-slash"
description = "ASUS Slash display"
keywords = ["ROG", "ASUS", "AniMe", "Slash"]
exclude = ["data"]

[features]
default = ["dbus", "detect"]
dbus = ["zbus"]
detect = ["dmi_id"]

[lib]
name = "rog_slash"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_derive.workspace = true
typeshare.workspace = true
zbus = { workspace = true, optional = true }
dmi_id = { path = "../dmi-id", optional = true }

[dev-dependencies]
cargo-husky.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde"]
