[package]
name = "rog_types"
version = "3.2.0"
license = "MPL-2.0"
readme = "README.md"
authors = ["Luke <luke@ljones.dev>"]
repository = "https://gitlab.com/asus-linux/asus-nb-ctrl"
homepage = "https://gitlab.com/asus-linux/asus-nb-ctrl"
description = "A small library of effect types and conversions for ROG Aura"
edition = "2018"

[dependencies]
gumdrop = "^0.8"
serde = "^1.0"
serde_derive = "^1.0"
rog_fan_curve = { version = "^0.1", features = ["serde"] }
zvariant = "^2.5"
zvariant_derive = "^2.5"